# pick_place

./: README.md
src/manipulator/: CMakeLists.txt  package.xml  setup.py
src/manipulator/config/: controllers.yaml
src/manipulator/launch/: gazebo.launch.py  master_launch.py  moveit2.launch.py
src/manipulator/manipulator/: moveit2_demo.cpp  planning_demo.cpp  rtb.py  sync_camera.py
src/manipulator/models/manipulator/: model.config
src/manipulator/urdf/: manipulator.urdf.xacro
src/manipulator/worlds/: empty.world
src/manipulator_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/manipulator_moveit_config/config/: basic_camera.urdf.xacro  chomp_planning.yaml  dump.txt  gripper_moveit_controllers.yaml  hand.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  manipulator.ros2_control.xacro  manipulator.srdf  manipulator.urdf  manipulator.urdf.xacro  manipulator_arm.srdf.xacro  manipulator_arm.xacro  manipulator_arm_hand.srdf.xacro  manipulator_config.yaml  manipulator_hand.ros2_control.xacro  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  sensors_3d.yaml  square_blue.urdf.xacro  square_green.urdf.xacro  square_red.urdf.xacro  warehouse_db.sqlite
src/manipulator_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
src/master_panda/: package.xml  setup.cfg  setup.py
src/master_panda/config/: gazebo_params.yaml
src/master_panda/launch/: master_launch.py
src/master_panda/master_panda/: rtb.py
src/master_panda/models/panda/: model.config
src/master_panda/rviz2/: default.rviz
src/master_panda/urdf/: panda.urdf.xacro  square.urdf.xacro
src/master_panda/worlds/: empty.world
src/robotic_arms_control/launch/: gazebo_bringup.launch.py
src/robotic_arms_control/urdf/: panda_arm.urdf
src/robotics_toolbox/: package.xml  setup.cfg  setup.py
videos/: camera_depth_rgb_rtb.webm  controlling_gazebo_robot_from_rviz_moveit2.mov  gazebo_object_attach_issue.mov
