<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>RoboticsToolBox</name>
  <version>0.0.0</version>
  <description>Using RTB to perform forward and inverse kinematics for manipulator operations.</description>
  <maintainer email="shailendra.sekhar@ihub-data.iiit.ac.in">humble</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>geometry_msgs</depend>


  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>
  <!--exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend-->

  <depend>ros2_controllers</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_python</build_type>
    <!--gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/meshes"/-->
  </export>
</package>
